--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="../../min/lec_js_utils.min.js"></script>
+    <script src="../min/lec_js_utils.min.js"></script>
+    <style>
+      .a {
+        color: red;
+      }
+    </style>
   </head>
   <body>
+    <div id="app">1</div>
     <script>
-      utils.onHashChange(() => console.log("HashChange"));
+      console.log(utils.getOS("id", "lee"));
     </script>
   </body>
 </html>
