--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,9 @@
   <body>
     <div id="app">1</div>
     <script>
-      console.log(utils.getOS("id", "lee"));
+      // console.log(utils.getOS("id", "lee"));
+      const a = utils.filterCard("410987100018420987") === "4109871000****0987";
+      console.log(a);
     </script>
   </body>
 </html>
