--- a/demo/index.html
+++ b/demo/index.html
@@ -13,49 +13,14 @@
     </style>
   </head>
   <body>
-    <div id="app">1</div>
+    <!-- <div id="app">1</div> -->
+    <input id="app" value="123" />
+    <textarea id="area" name="" id="" cols="30" rows="10">
+ 到数据库华东科技撒回到家卡仕达凯老师</textarea
+    >
     <script>
-      // 节流 delay: 每隔delay 毫秒输出一次。降低评率
-      function throttle(handler, delay) {
-        let timer = true;
-        return function () {
-          if (!timer) {
-            return;
-          }
-          timer = false;
-          handler();
-          setTimeout(() => {
-            timer = true;
-          }, delay);
-        };
-      }
-      let num = 0;
-      const a = throttle(() => {
-        num++;
-        console.log("throttle", num);
-      }, 1000);
-
-      // 防抖函数-只执行最后一次
-      function debounce(handler, delay) {
-        let timer = null;
-        return function () {
-          if (timer) {
-            clearTimeout(timer);
-          }
-          timer = setTimeout(handler, delay);
-        };
-      }
-
-      let number = 0;
-      const b = debounce(() => {
-        number++;
-        console.log("debounce", number);
-      }, 1000);
-
-      window.onresize = function () {
-        a();
-        b();
-      };
+      let a = utils.getSize(40);
+      console.log(a);
     </script>
   </body>
 </html>
