add: brfore url

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,12 +15,10 @@
   <body>
     <!-- <div id="app">1</div> -->
     <input id="app" value="123" />
-    <textarea id="area" name="" id="" cols="30" rows="10">
- 到数据库华东科技撒回到家卡仕达凯老师</textarea
-    >
+
     <script>
-      let a = utils.getSize(40);
-      console.log(a);
+      const timer = utils.isSameDay(new Date(), new Date()); // true
+      console.log(timer);
     </script>
   </body>
 </html>
