--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="../min/lec_js_utils.min.js"></script>
+    <script src="../min/h-bunny.min.js"></script>
     <style>
       .a {
         color: red;
